syntax = "proto3";
import "mailbox.proto";
package LPS.Core.Rpc.InnerMessages;

message ClientCreateEntity {
  string EntityClassName = 1;
  MailBox ServerClientMailBox = 2;
};
