syntax = "proto3";
import "google/protobuf/any.proto";
package LPS.Common.Rpc.InnerMessages;

enum SyncPropType
{
    PlaintAndCostume = 0;
    Dict = 1;
    List = 2;
}

enum SyncOperation
{
    SetValue = 0;
    UpdatePair = 1;
    AddListElem = 2;
    RemoveElem = 3;
    Clear = 4;
    InsertElem = 5;
}

message RequirePropertyFullSync {
    string EntityId = 1;
}

message PropertyFullSync {
    string EntityId = 1;
    google.protobuf.Any PropertyTree = 2;
}

message PropertySyncCommandList {
    SyncPropType PropType = 1;
    string EntityId = 2;
    string Path = 3;
    bool IsComponentSyncMsg = 4;
    string ComponentName = 5;
    repeated PropertySyncCommand SyncArg = 6;
}

message PropertySyncCommand {
    SyncOperation Operation = 1;
    repeated google.protobuf.Any Args = 2;
}

message RequireComponentSync {
    string EntityId = 1;
    string ComponentName = 2;
}

message ComponentSync {
    string EntityId = 1;
    string ComponentName = 2;
    google.protobuf.Any PropertyTree = 3;
}
